# CppPlay

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: channel.hpp  functional.hpp  matrix.hpp  version.hpp
tests/: CMakeLists.txt
tests/include/: data.hpp.in
tests/test_functional/: CMakeLists.txt  main.cpp
tests/test_matrix/: CMakeLists.txt  main.cpp
